@@ -1,3 +1,8 @@
+2007-08-19  Jb Evain  <jbevain@novell.com>
+
+	* Mono.Cecil.Cil/CodeReader.cs:
+		Deal with generic exceptions.
+
 2007-08-15  Jb Evain  <jbevain@novell.com>
 
 	* CodeGen/cecil.xml,
